# FluxDrop

./: .gitignore  API.md  CMakeLists.txt  README.md  Reddit.md  TESTING.md
Engine/: CMakeLists.txt
Engine/include/: transfer.hpp
Engine/include/protocol/: packet.hpp
Engine/src/: core_api.cpp  networking.cpp  packet.cpp  security.cpp
Win-Linux/: CMakeLists.txt  deploy.sh
Win-Linux/appimage/: FluxDrop.desktop  build-appimage.sh
Win-Linux/include/ui/: device_list.hpp
Win-Linux/src/: main.cpp
Win-Linux/src/ui/: device_list.cpp  file_sender.cpp  main_window.cpp
android/: gradle.properties  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/dev/fluxdrop/app/: MainActivity.kt
android/app/src/main/java/dev/fluxdrop/app/bridge/: FluxDropCore.kt
android/app/src/main/java/dev/fluxdrop/app/service/: TransferService.kt
android/app/src/main/java/dev/fluxdrop/app/ui/components/: TransferProgress.kt
android/app/src/main/java/dev/fluxdrop/app/ui/screens/: ReceiveScreen.kt  SendScreen.kt
android/app/src/main/java/dev/fluxdrop/app/ui/theme/: Theme.kt
android/gradle/wrapper/: gradle-wrapper.properties
include/: fluxdrop_core.h  networking.hpp  security.hpp  transfer.hpp
include/protocol/: file_meta.hpp  packet.hpp
include/ui/: device_list.hpp  file_sender.hpp  main_window.hpp  transfer_dialog.hpp
linux/: CMakeLists.txt  fluxdrop
linux/appimage/: AppRun  FluxDrop.desktop  build-appimage.sh
linux/include/: fluxdrop_core.h  logger.hpp
linux/include/ui/: device_list.hpp  file_sender.hpp
linux/src/: main.cpp
linux/src/ui/: device_list.cpp  file_sender.cpp  main_window.cpp
src/: core_api.cpp  main.cpp  networking.cpp  packet.cpp  security.cpp  transfer.cpp
src/ui/: device_list.cpp  file_sender.cpp  transfer_dialog.cpp
